Created main screen with publish post and mian post structure

--- a/src/app/tools/autheticator/autheticator.component.html
+++ b/src/app/tools/autheticator/autheticator.component.html
@@ -1,28 +1,32 @@
 <mat-card id="home-form">
-     <mat-card-header>
-          <mat-card-title>
-               <h2>{{getStateText()}}</h2>
-          </mat-card-title>
-     </mat-card-header>
-     <div *ngIf="isSignUpState()" id="home-form-content">
-          <input placeholder="Email" class="home-input-form">
-          <input type="password" placeholder="Password" class="home-input-form">
-          <input type="password" placeholder="Confirm Password" class="home-input-form">
-          <button mat-raised-button color="warn">Sign up</button>
-     </div>
-     <div *ngIf="isLoginState()" id="home-form-content">
-          <input placeholder="Email" class="home-input-form">
-          <input type="password" placeholder="Password" class="home-input-form">
-          <button mat-raised-button color="warn">Login</button>
-     </div>
+     <form method="post" id="home-form-base">
+          <mat-card-header style="justify-content: center;">
+               <mat-card-title>
+                    <h2>{{getStateText()}}</h2>
+               </mat-card-title>
+          </mat-card-header>
+          <div *ngIf="isSignUpState()" id="home-form-content">
+               <input placeholder="Email" class="home-input-form" [(ngModel)]="email" name="email">
+               <input type="password" placeholder="Password" class="home-input-form" [(ngModel)]="password"
+                    name="password">
+               <input type="password" placeholder="Confirm Password" class="home-input-form">
+               <button mat-raised-button color="warn" type="submit">Sign up</button>
+          </div>
+          <div *ngIf="isLoginState()" id="home-form-content">
+               <input placeholder="Email" class="home-input-form" [(ngModel)]="email" name="email">
+               <input type="password" placeholder="Password" class="home-input-form" [(ngModel)]="password"
+                    name="password">
+               <button mat-raised-button color="warn" type="submit" (click)="onLoginButtonClick()">Login</button>
+          </div>
 
-     <div *ngIf="isForgotPasswordState()" id="home-form-content">
-          <input placeholder="Email" class="home-input-form">
-          <button mat-raised-button color="warn">Reset Password</button>
-     </div>
-     <mat-card-actions id="home-form-actions">
-          <button mat-button (click)="onCreateAccountClick()">Sign up</button>
-          <button mat-button (click)="onLoginClick()">Login</button>
-          <button mat-button (click)="onForgotPasswordClick()">Forgot Password</button>
-     </mat-card-actions>
+          <div *ngIf="isForgotPasswordState()" id="home-form-content">
+               <input placeholder="Email" class="home-input-form">
+               <button mat-raised-button color="warn">Reset Password</button>
+          </div>
+          <mat-card-actions id="home-form-actions">
+               <button mat-button (click)="onCreateAccountClick()">Sign up</button>
+               <button mat-button (click)="onLoginClick()">Login</button>
+               <button mat-button (click)="onForgotPasswordClick()">Forgot Password</button>
+          </mat-card-actions>
+     </form>
 </mat-card>
