--- a/src/app/tools/autheticator/autheticator.component.css
+++ b/src/app/tools/autheticator/autheticator.component.css
@@ -16,12 +16,12 @@ button {
      display: flex;
      justify-content: space-evenly;
      align-items: center;
-     width: 80%;
+     width: 100%;
 }
 
 #home-form {
      background-color: #1a1a1a;
-     width: 9cap;
+     width: 90%;
      display: flex;
      align-items: center;
 }
@@ -30,10 +30,17 @@ button {
      display: flex;
      justify-content: center;
      align-items: center;
-     height: 100%;
-     width: 90%;
+     height: 90%;
+     width: 100%;
      margin: 1em 0;
      padding: 0.3em 0.5em;
      border-radius: 8px;
      font-size: 0.9em;
+}
+
+#home-form-base {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     text-align: center;
 }
