Created friend component

--- a/src/app/components/friend/friend.component.html
+++ b/src/app/components/friend/friend.component.html
@@ -1,1 +1,4 @@
-<p>friend works!</p>
+<div class="friend-card">
+     <img src="path-to-friend-picture.jpg" alt="Friend Picture" class="friend-picture">
+     <h2 class="friend-name">Friend Name</h2>
+</div>
