--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -6,6 +6,6 @@
           <app-post class="main-sections" />
      </div>
      <div class="main-sections" id="right-main-section">
-          <div>Friends</div>
+          <app-friend />
      </div>
 </div>
