--- a/src/app/components/publish-post/publish-post.component.css
+++ b/src/app/components/publish-post/publish-post.component.css
@@ -1,7 +1,8 @@
 #publish-post-form-group {
      display: flex;
      flex-direction: column;
-     width: 100%;
+     width: 98%;
+     margin: 0 0 0.5rem 0;
 }
 
 #post-content {
