--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,4 +1,4 @@
-<app-navigation-bar />
+<app-navigation-bar [data]="email" [ngClass]={loggedIn} />
 <div id="main-body-grid">
      <div class="main-sections" id="left-main-section">Left Column</div>
      <div class="main-sections">
