--- a/src/app/components/navigation-bar/navigation-bar.component.css
+++ b/src/app/components/navigation-bar/navigation-bar.component.css
@@ -34,3 +34,15 @@
      display: inline-block;
      cursor: pointer;
 }
+
+.user-picture {
+     width: 35px;
+     height: 35px;
+     border-radius: 50%;
+     margin-right: 1rem;
+     background-color: white;
+}
+
+.user-picture:hover {
+     cursor: pointer;
+}
