creado html para perfil y funciones de datos ademas de interfaz para usuario

--- a/src/app/tools/autheticator/autheticator.component.html
+++ b/src/app/tools/autheticator/autheticator.component.html
@@ -1,5 +1,5 @@
 <mat-card id="home-form">
-     <form method="post" id="home-form-base" (ngSubmit)="onSignUpButtonClick()">
+     <form method="post" id="home-form-base">
           <mat-card-header style="justify-content: center;">
                <mat-card-title>
                     <h2>{{getStateText()}}</h2>
