--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -4,7 +4,7 @@
                <div class="nav-bar-items">SocialMedia</div>
           </div>
           <div id="nav-bar-right">
-               <div [hidden]="loggedIn">
+               <div [hidden]="!this.loggedInState" (click)="goToProfile()">
                     <img src="path-to-friend-picture.jpg" alt="Friend Picture" class="user-picture" />
                </div>
           </div>
