--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
 <div id="nav-bar">
      <div id="nav-bar-content">
           <div id="nav-bar-left">
-               <div class="nav-bar-items">SocialMedia</div>
+               <div class="nav-bar-items" (click)="goToMain()">SocialMedia</div>
           </div>
           <div id="nav-bar-right">
                <div [hidden]="!this.loggedInState" (click)="goToProfile()">
