--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,19 +1,14 @@
 <mat-card class="main-body-content">
      <mat-card-header style="width: 90%;">
-          <mat-card-title><a href="">User name</a></mat-card-title>
+          <mat-card-title><a href="">{{this.post?.nickname_perfil}}</a></mat-card-title>
      </mat-card-header>
      <mat-card-content id="card-content-container">
           <div class="card-content">
-               <div id="card-picture-content">Card picture</div>
-               <div id="card-text-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                    ornare tincidunt ligula. Pellentesque varius, magna cursus
-                    iaculis egestas, augue felis elementum purus, non rutrum est mi eu diam. Etiam in
-                    scelerisque elit. Mauris non magna
-                    libero. Quisque accumsan magna a urna fermentum, et aliquet enim sollicitudin. Nam eget
-                    tortor non turpis finibus
-                    ullamcorper. Nam molestie, dolor et malesuada gravida, sapien odio faucibus velit, non
-                    vestibulum arcu sem ac sem.
-                    Mauris rhoncus sollicitudin urna eget gravida.</div>
+               <div id="card-picture-content">
+                    <img *ngIf="this.post?.foto_publicacion" [src]="this.post?.foto_publicacion" alt="Profile picture"
+                         class="user-picture" />
+               </div>
+               <div id="card-text-content">{{this.post?.texto_publicacion}}</div>
           </div>
      </mat-card-content>
      <mat-card-actions>
