--- a/src/app/pages/main/main.component.css
+++ b/src/app/pages/main/main.component.css
@@ -10,6 +10,7 @@
      align-items: center;
      background-color: #101010;
      color: #ffffff;
+     width: 100%;
 }
 
 #right-main-section {
@@ -18,6 +19,18 @@
 }
 
 #post {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     background-color: #1a1a1a;
+     width: 60%;
+     color: #ffffff;
+     margin-bottom: 1rem;
+     /* Add space between each post */
+}
+
+#general-post {
      display: flex;
      flex-direction: column;
      justify-content: center;
