--- a/src/app/components/post/post.component.css
+++ b/src/app/components/post/post.component.css
@@ -4,14 +4,19 @@
      justify-content: center;
      align-items: center;
      background-color: #1a1a1a;
-     width: 60%;
+     box-sizing: border-box;
+     width: 70%;
      color: #ffffff;
+     min-height: 100px;
+     max-height: 500px;
+     padding: 1rem;
 }
 
 .card-content {
      padding: 0.01em 1rem;
      width: 100%;
      align-items: center;
+     height: 100%;
 }
 
 #card-content-container {
@@ -20,11 +25,9 @@
      justify-content: center;
      align-items: center;
      width: 100%;
-     /* Ensure it takes up the full width of its parent */
-     /* Set a minimum height to ensure the card doesn't get too small */
+     height: 100%;
      padding: 0.5rem;
      box-sizing: border-box;
-     /* Include padding in the element's total width and height */
 }
 
 #card-picture-content {
@@ -35,13 +38,9 @@
      background-color: #2a2a2a;
      border-radius: 8px;
      width: 100%;
-     /* Ensure it takes up the full width of the container */
-     height: auto;
-     /* Adjust height to maintain aspect ratio */
+     height: 100%;
      max-height: 400px;
-     /* Set a maximum height */
      overflow: hidden;
-     /* Ensure the image does not overflow the container */
 }
 
 #card-text-content {
@@ -49,17 +48,21 @@
      flex-direction: column;
      justify-content: center;
      align-items: center;
-     text-align: justify;
+     text-align: left;
      margin: 0.2rem 0;
      padding: 0.5rem 0.5rem;
      border-radius: 8px;
      width: 100%;
-     /* Ensure it takes up the full width of the container */
+     height: 100%;
 }
 
 .user-picture {
      width: 100%;
      height: 100%;
      object-fit: cover;
-     /* Ensure the image covers the entire area without distortion */
+}
+
+#post-user-title:hover {
+     cursor: pointer;
+     /* Aquí puedes agregar los estilos para el hover */
 }
