--- a/src/app/pages/profile/profile.component.css
+++ b/src/app/pages/profile/profile.component.css
@@ -13,9 +13,8 @@ body {
      align-items: center;
      background-color: #1a1a1a;
      padding: 1rem;
-     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-     margin-bottom: 1rem;
-     border-radius: 8px;
+     margin-bottom: 0.3rem;
+
 }
 
 #main-bar-profile img {
@@ -51,24 +50,19 @@ body {
      background-color: #1a1a1a;
      padding: 1rem;
      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-     border-radius: 8px;
+     color: #ffffff;
      flex: 1;
-     max-width: 20%;
+     width: 20%;
 }
 
 .right-profile-container {
-     background-color: #1a1a1a;
-     padding: 1rem;
-     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-     border-radius: 8px;
-     flex: 4;
-     max-width: 80%;
      display: flex;
      flex-direction: column;
-     justify-content: center;
-     /* Center vertically */
      align-items: center;
-     /* Center horizontally */
+     background-color: #101010;
+     color: #ffffff;
+     width: 80%;
+     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 #general-profile-info-container h3 {
@@ -77,32 +71,29 @@ body {
 }
 
 .post-profile-container {
+     display: flex;
+     justify-content: center;
+     font-size: 1.5em;
      margin-top: 1rem;
      width: 100%;
      /* Ensure it takes up the full width of the container */
 }
 
-.post {
+
+.section-body {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
      background-color: #1a1a1a;
      padding: 1rem;
-     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-     border-radius: 8px;
-     align-content: center;
-     margin-bottom: 1rem;
-     width: 100%;
-     /* Ensure it takes up the full width of the container */
      color: #ffffff;
-     /* Ensure text color is white */
+     width: 100%;
 }
 
-@media (max-width: 768px) {
-     #main-body-profile {
-          flex-direction: column;
-          align-items: center;
-     }
-
-     .left-profile-container,
-     .right-profile-container {
-          max-width: 100%;
-     }
+.posts-continer {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     background-color: #101010;
+     color: #ffffff;
 }
