avances en posts

--- a/src/app/components/friend/friend.component.css
+++ b/src/app/components/friend/friend.component.css
@@ -1,6 +1,6 @@
 .friend-card {
      display: flex;
-     flex-direction: row;
+     flex-direction: column;
      justify-content: space-between;
      margin: 20px;
 }
