--- a/src/app/components/friend/friend.component.html
+++ b/src/app/components/friend/friend.component.html
@@ -1,4 +1,4 @@
 <div class="friend-card">
-     <img src="path-to-friend-picture.jpg" alt="Friend Picture" class="friend-picture">
-     <h2 class="friend-name">Friend Name</h2>
+     <h2 class="friend-name">{{this.friendNickname}}</h2>
+     <button mat-button>UNFRIEND</button>
 </div>
