--- a/src/app/components/publish-post/publish-post.component.html
+++ b/src/app/components/publish-post/publish-post.component.html
@@ -1,17 +1,16 @@
 <div id="publish-post-form">
-     <form id="publish-form">
+     <form id="publish-form" (submit)="onSubmit($event)">
           <div id="publish-post-form-group">
-               <input type="text" id="post-description" name="post-description" />
+               <input type="text" id="post-description" name="post-description" [(ngModel)]="postDescription"
+                    placeholder="Enter description" />
           </div>
           <div id="publish-post-buttons">
                <div id="publish-file-container">
                     <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload>
-
                     <div class="file-upload">
-
                          {{fileName || ""}}
-
-                         <button mat-mini-fab color="disabled" class="upload-btn" (click)="fileUpload.click()">
+                         <button mat-mini-fab color="disabled" class="upload-btn" (click)="fileUpload.click()"
+                              type="button">
                               <mat-icon>attach_file</mat-icon>
                          </button>
                     </div>
