--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -5,7 +5,7 @@
           </div>
           <div id="nav-bar-right">
                <div [hidden]="!this.loggedInState" (click)="goToProfile()">
-                    <img src="path-to-friend-picture.jpg" alt="Friend Picture" class="user-picture" />
+                    <h2 id="username">{{this.username}}</h2>
                </div>
           </div>
      </div>
