--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -6,6 +6,7 @@
           <div id="nav-bar-right">
                <div [hidden]="!this.loggedInState" (click)="goToProfile()">
                     <h2 id="username">{{this.username}}</h2>
+                    <h4 id="logout" (click)="logOut()">cerrar sesión</h4>
                </div>
           </div>
      </div>
