--- a/src/app/components/friend/friend.component.html
+++ b/src/app/components/friend/friend.component.html
@@ -1,4 +1,4 @@
 <div class="friend-card">
      <h2 class="friend-name">{{this.friendNickname}}</h2>
-     <button mat-button>UNFRIEND</button>
+     <button mat-button (click)="action()">{{this.message}}</button>
 </div>
